add: build initial communication graphs

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "560987b6",
    "metadata": {},
    "outputs": [],
@@ -11,12 +11,22 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import r2_score"
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "import networkx as nx"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ecb5a9c",
+   "metadata": {},
+   "source": [
+    "#### Figure 2: Relationship between population and number of Reddit users across US states. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "cd94b84b",
    "metadata": {},
    "outputs": [
@@ -250,7 +260,7 @@
        "[5 rows x 158 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "aabd3fbd",
    "metadata": {},
    "outputs": [
@@ -333,9 +343,406 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ea2d7280",
+   "metadata": {},
+   "source": [
+    "TO DO: Find states which # users is one st deviation more than the prediction. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7350daa0",
+   "metadata": {},
+   "source": [
+    "#### Table 1: Linear regressions to predict GDP per capita of US states from: \n",
+    "\n",
+    "a) population density only\n",
+    "\n",
+    "b) spatial diversity computed on the full communication graph\n",
+    "\n",
+    "c) spatial diversity computed on\n",
+    "dimension-specific communication graphs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "119a66af",
+   "metadata": {},
+   "source": [
+    "#### Full comunication graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d431acc4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dim_df = pd.read_csv(\"data/reddit_messages_dimensions.csv\", sep=\"|\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0f31f89d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>author</th>\n",
+       "      <th>time</th>\n",
+       "      <th>dest_author</th>\n",
+       "      <th>author_state_code</th>\n",
+       "      <th>dest_state_code</th>\n",
+       "      <th>support_binary_adaptive_0.5</th>\n",
+       "      <th>knowledge_binary_adaptive_0.5</th>\n",
+       "      <th>conflict_binary_adaptive_0.5</th>\n",
+       "      <th>power_binary_adaptive_0.5</th>\n",
+       "      <th>similarity_binary_adaptive_0.5</th>\n",
+       "      <th>...</th>\n",
+       "      <th>support_binary_adaptive_0.99</th>\n",
+       "      <th>knowledge_binary_adaptive_0.99</th>\n",
+       "      <th>conflict_binary_adaptive_0.99</th>\n",
+       "      <th>power_binary_adaptive_0.99</th>\n",
+       "      <th>similarity_binary_adaptive_0.99</th>\n",
+       "      <th>fun_binary_adaptive_0.99</th>\n",
+       "      <th>status_binary_adaptive_0.99</th>\n",
+       "      <th>trust_binary_adaptive_0.99</th>\n",
+       "      <th>identity_binary_adaptive_0.99</th>\n",
+       "      <th>romance_binary_adaptive_0.99</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>allurex</td>\n",
+       "      <td>1.352921e+09</td>\n",
+       "      <td>allurex</td>\n",
+       "      <td>MO</td>\n",
+       "      <td>MO</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>dtrmp4</td>\n",
+       "      <td>1.352929e+09</td>\n",
+       "      <td>allurex</td>\n",
+       "      <td>MI</td>\n",
+       "      <td>MO</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>cthompsonguy</td>\n",
+       "      <td>1.352949e+09</td>\n",
+       "      <td>allurex</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>MO</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>chicken_or_chicken</td>\n",
+       "      <td>1.352949e+09</td>\n",
+       "      <td>allurex</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>MO</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>thkmass</td>\n",
+       "      <td>1.352963e+09</td>\n",
+       "      <td>allurex</td>\n",
+       "      <td>MA</td>\n",
+       "      <td>MO</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 75 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               author          time dest_author author_state_code  \\\n",
+       "0             allurex  1.352921e+09     allurex                MO   \n",
+       "1              dtrmp4  1.352929e+09     allurex                MI   \n",
+       "2        cthompsonguy  1.352949e+09     allurex                IN   \n",
+       "3  chicken_or_chicken  1.352949e+09     allurex                AL   \n",
+       "4             thkmass  1.352963e+09     allurex                MA   \n",
+       "\n",
+       "  dest_state_code  support_binary_adaptive_0.5  knowledge_binary_adaptive_0.5  \\\n",
+       "0              MO                            0                              1   \n",
+       "1              MO                            1                              0   \n",
+       "2              MO                            0                              0   \n",
+       "3              MO                            0                              0   \n",
+       "4              MO                            0                              1   \n",
+       "\n",
+       "   conflict_binary_adaptive_0.5  power_binary_adaptive_0.5  \\\n",
+       "0                             0                          0   \n",
+       "1                             0                          1   \n",
+       "2                             1                          0   \n",
+       "3                             0                          0   \n",
+       "4                             0                          0   \n",
+       "\n",
+       "   similarity_binary_adaptive_0.5  ...  support_binary_adaptive_0.99  \\\n",
+       "0                               0  ...                             0   \n",
+       "1                               1  ...                             0   \n",
+       "2                               0  ...                             0   \n",
+       "3                               1  ...                             0   \n",
+       "4                               0  ...                             0   \n",
+       "\n",
+       "   knowledge_binary_adaptive_0.99  conflict_binary_adaptive_0.99  \\\n",
+       "0                               0                              0   \n",
+       "1                               0                              0   \n",
+       "2                               0                              0   \n",
+       "3                               0                              0   \n",
+       "4                               0                              0   \n",
+       "\n",
+       "   power_binary_adaptive_0.99  similarity_binary_adaptive_0.99  \\\n",
+       "0                           0                                0   \n",
+       "1                           0                                0   \n",
+       "2                           0                                0   \n",
+       "3                           0                                0   \n",
+       "4                           0                                0   \n",
+       "\n",
+       "   fun_binary_adaptive_0.99  status_binary_adaptive_0.99  \\\n",
+       "0                         0                            0   \n",
+       "1                         0                            0   \n",
+       "2                         0                            0   \n",
+       "3                         0                            0   \n",
+       "4                         0                            0   \n",
+       "\n",
+       "   trust_binary_adaptive_0.99  identity_binary_adaptive_0.99  \\\n",
+       "0                           0                              0   \n",
+       "1                           0                              0   \n",
+       "2                           0                              0   \n",
+       "3                           0                              0   \n",
+       "4                           0                              0   \n",
+       "\n",
+       "   romance_binary_adaptive_0.99  \n",
+       "0                             0  \n",
+       "1                             0  \n",
+       "2                             0  \n",
+       "3                             0  \n",
+       "4                             0  \n",
+       "\n",
+       "[5 rows x 75 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dim_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "94c05df2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edge_weights = (\n",
+    "    dim_df.groupby([\"author\", \"dest_author\"])\n",
+    "    .size()\n",
+    "    .reset_index(name=\"weight\")\n",
+    ")\n",
+    "\n",
+    "# Threshold of 4 \n",
+    "edge_weights = edge_weights[edge_weights[\"weight\"] >= 4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "4c7f18fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graph has 117163 nodes and 277204 edges\n"
+     ]
+    }
+   ],
+   "source": [
+    "G = nx.DiGraph()\n",
+    "\n",
+    "for _, row in edge_weights.iterrows():\n",
+    "    G.add_edge(row[\"author\"], row[\"dest_author\"], weight=row[\"weight\"])\n",
+    "\n",
+    "print(f\"Graph has {G.number_of_nodes()} nodes and {G.number_of_edges()} edges\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a324026",
+   "metadata": {},
+   "source": [
+    "#### Communication specific graphs..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "18bcf025",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dimensions = [\n",
+    "    \"support\", \"knowledge\", \"conflict\", \"power\",\n",
+    "    \"similarity\", \"fun\", \"status\", \"trust\",\n",
+    "    \"identity\", \"romance\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "92cda0df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graphs = {}\n",
+    "\n",
+    "for dim in dimensions:\n",
+    "    col = f\"{dim}_binary_adaptive_0.99\" \n",
+    "    df = dim_df[dim_df[col] == 1]\n",
+    "\n",
+    "    edges = (\n",
+    "        df.groupby([\"author\", \"dest_author\"])\n",
+    "        .size()\n",
+    "        .reset_index(name=\"weight\")\n",
+    "    )\n",
+    "\n",
+    "    Gd = nx.DiGraph()\n",
+    "    for _, row in edges.iterrows():\n",
+    "        Gd.add_edge(row[\"author\"], row[\"dest_author\"], weight=row[\"weight\"])\n",
+    "\n",
+    "    graphs[dim] = Gd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1ad555d",
+   "metadata": {},
+   "source": [
+    "3m 34sec.."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9d7d9b8",
+   "metadata": {},
+   "source": [
+    "#### Computing diversity of interactions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3da35a59",
+   "id": "717d7892",
    "metadata": {},
    "outputs": [],
    "source": []
